  * Reduce number of kernel-image flavours
  * Reenable ums driver in GENERIC. Closes: #492891.
  * Do not specify SMP in GENERIC, it is enabled on per flavour basis
  * Ship config file used for building corresponding flavour
  * redefine POLL_HUP to be distinct from POLL_ERR
  
  [ Aurelien Jarno ]
  * debian/patches/*: convert to patchlevel p1 as requested by the new 
    dpkg-source.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 04 Jan 2009 12:57:20 +0100

kfreebsd-7 (7.0-7) unstable; urgency=low

  [ Petr Salinger ]
  * libdb-dev is now a real package, build-depend only on it.
    Closes: #501420.
  * use and prefer freebsd-buildutils over freebsd7-buildutils.
    Closes: #474762.
  * add Vcs-* fields into debian/control.

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.8.0 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Oct 2008 14:23:26 +0200

kfreebsd-7 (7.0-6) unstable; urgency=high

  * Fix IPv6 Neighbor Discovery Protocol routing vulnerability
    (FreeBSD-SA-08:10.nd6 / CVE-2008-2476).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 06 Oct 2008 15:35:56 +0200

kfreebsd-7 (7.0-5) unstable; urgency=high

  * Fix amd64 swapgs local privilege escalation 
    (FreeBSD-SA-08:07.amd64 / CVE-2008-3890).
  * Fix nmount(2) local arbitrary code execution 
    (FreeBSD-SA-08:08.nmount / CVE-2008-3531).
  * Fix remote kernel panics on IPv6 connections 
    (FreeBSD-SA-08:09.icmp6 /CVE-2008-3530).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 04 Sep 2008 11:49:44 +0200

kfreebsd-7 (7.0-4) unstable; urgency=medium

  [ Petr Salinger ]
  * Fix subsecond timestamp resolution handling for *times(arg, NULL)
    syscall family. Exposed by touch. Closes: #489894.

  [ Aurelien Jarno ]
  * Build by gcc-4.3

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jul 2008 11:11:11 +0200

kfreebsd-7 (7.0-3) unstable; urgency=medium

  * Fix tcp options padding (FreeBSD-EN-08:02.tcp).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Jun 2008 10:44:25 +0200
