@@ -1,6 +1,6 @@
 Package: kfreebsd-image-@major@-@flavor@
 Architecture: kfreebsd-@arch@
-Section: base
+Section: admin
 Depends: kfreebsd-image-@major@-@compatflavor@
 Description: kernel of FreeBSD @major@ image (transitional package)
  This package used to depend on the latest binary image for kernel 
