@@ -1,6 +1,6 @@
 Package: kfreebsd-image-@version@-@abiname@-@flavor@
 Architecture: kfreebsd-@arch@
-Section: base
+Section: admin
 Depends: freebsd-utils (>= 5), module-init-tools (>= 6.1-6)
 Conflicts: kfreebsd-loader (<< 5.4-1.3)
 Provides: kfreebsd-image-@major@, kfreebsd-image
@@ -22,7 +22,7 @@ Description: Ndiswrapper kFreeBSD module
 
 Package: kfreebsd-image-@major@-@flavor@
 Architecture: kfreebsd-@arch@
-Section: base
+Section: admin
 Depends: kfreebsd-image-@version@-@abiname@-@flavor@
 Description: kernel of FreeBSD @major@ image
  This package depends on the latest binary image for kernel of FreeBSD @major@ on
