@@ -18,8 +18,10 @@ kfreebsd-7 (7.1-1) unstable; urgency=low
   [ Aurelien Jarno ]
   * debian/patches/*: convert to patchlevel p1 as requested by the new 
     dpkg-source.
+  * debian/control.compat.in, debian/control.flavor.in: set section of
+    images to admin.
 
- -- Aurelien Jarno <aurel32@debian.org>  Fri, 04 Jan 2009 12:57:20 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 04 Jan 2009 13:41:57 +0100
 
 kfreebsd-7 (7.0-7) unstable; urgency=low
 
